--- a/features/favorites/src/main/res/layout/activity_favorite.xml
+++ b/features/favorites/src/main/res/layout/activity_favorite.xml
@@ -5,5 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FavoriteActivity">
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/favorieRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
