--- a/features/favorites/src/main/res/layout/activity_favorite.xml
+++ b/features/favorites/src/main/res/layout/activity_favorite.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".FavoriteActivity">
 
+    <fragment
+        android:id="@+id/list"
+        android:name="com.vp.favorites.FavoriteMoviesFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
