--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4E342E</color>
-    <color name="colorPrimaryDark">#3E2723</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#D57E3C</color>
+    <color name="colorPrimaryDark">#A05D2E</color>
+    <color name="colorAccent">#CE3D2C</color>
 </resources>
