--- a/features/list/src/main/res/menu/options_menu.xml
+++ b/features/list/src/main/res/menu/options_menu.xml
@@ -7,4 +7,9 @@
         android:title="@string/search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/refresh"
+        android:icon="@android:drawable/ic_menu_revert"
+        android:title="@string/refresh"
+        app:showAsAction="always" />
 </menu>
