--- a/features/list/src/main/res/menu/options_menu.xml
+++ b/features/list/src/main/res/menu/options_menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!-- TODO: Some Refreshments (2) -->
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/baseline_refresh_24"
+        android:title="@string/refresh"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
