--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/star"
-        android:icon="@drawable/ic_star"
-        app:showAsAction="always"
-        android:title="@string/favorite" />
+        android:icon="@drawable/ic_star_not_selected"
+        android:title="@string/favorite"
+        app:showAsAction="always" />
 </menu>
