--- a/features/list/src/main/res/layout/fragment_list.xml
+++ b/features/list/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <ViewAnimator
+        android:layout_marginTop="10dp"
         android:id="@+id/viewAnimator"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,12 +22,6 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-
         <TextView
             android:id="@+id/errorText"
             android:layout_width="wrap_content"
@@ -34,6 +29,12 @@
             android:layout_gravity="center"
             android:text="@string/data_loading_error" />
     </ViewAnimator>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
