--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -4,7 +4,8 @@
 
     <item
         android:id="@+id/star"
-        android:icon="@drawable/ic_star"
+        android:icon="@drawable/ic_star_border"
+        android:checkable="true"
         app:showAsAction="always"
         android:title="@string/favorite" />
 </menu>
