--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -4,7 +4,15 @@
 
     <item
         android:id="@+id/star"
-        android:icon="@drawable/ic_star"
+        android:icon="@drawable/ic_favorite_border_black_24dp"
         app:showAsAction="always"
+        android:visible="false"
+        android:title="@string/favorite" />
+
+    <item
+        android:id="@+id/star_active"
+        android:icon="@drawable/ic_favorite_red_24dp"
+        app:showAsAction="always"
+        android:visible="false"
         android:title="@string/favorite" />
 </menu>
