--- a/features/favorites/src/main/res/layout/item_list.xml
+++ b/features/favorites/src/main/res/layout/item_list.xml
@@ -13,4 +13,9 @@
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </FrameLayout>
