--- a/features/detail/src/main/res/layout/activity_detail.xml
+++ b/features/detail/src/main/res/layout/activity_detail.xml
@@ -25,7 +25,7 @@
             android:layout_height="200dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:imageUrl="@{viewModel.details.poster}"
+            app:imageUrl="@{viewModel.details().poster}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
@@ -39,7 +39,7 @@
             android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@{@string/title(viewModel.details.title)}"
+            android:text="@{@string/title(viewModel.details().title)}"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{@string/year(viewModel.details.year)}"
+            android:text="@{@string/year(viewModel.details().year)}"
             app:layout_constraintStart_toEndOf="@+id/poster"
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="Year: 2019" />
@@ -65,7 +65,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{@string/director(viewModel.details.director)}"
+            android:text="@{@string/director(viewModel.details().director)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/poster"
             app:layout_constraintTop_toBottomOf="@+id/year"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{@string/runtime(viewModel.details.runtime)}"
+            android:text="@{@string/runtime(viewModel.details().runtime)}"
             app:layout_constraintStart_toEndOf="@+id/poster"
             app:layout_constraintTop_toBottomOf="@+id/director"
             tools:text="Runtime: 2h 20min " />
@@ -89,7 +89,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@{viewModel.details.plot}"
+            android:text="@{viewModel.details().plot}"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
