show progress when loading more items

--- a/features/list/src/main/res/layout/fragment_list.xml
+++ b/features/list/src/main/res/layout/fragment_list.xml
@@ -33,7 +33,12 @@
             android:text="@string/data_loading_error" />
     </ViewAnimator>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    <ProgressBar
+        android:id="@+id/loadMoreProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
